# infra-sandbox

./: .env.local  .env.template  .gitignore  README.md
.github/workflows/: docker-base.yml  docker.yml
agents/: .gitignore  Cargo.toml
agents/crates/contracts/: Cargo.toml  Dockerfile
agents/crates/contracts/src/: lib.rs
agents/crates/datastore/: Cargo.toml
agents/crates/datastore/src/: lib.rs
agents/crates/executor/: Cargo.toml  Dockerfile  docker-compose.yml
agents/crates/executor/src/: main.rs
agents/crates/indexer/: Cargo.toml  Dockerfile  docker-compose.yml
agents/crates/indexer/src/: main.rs
chain/: Dockerfile  docker-compose.yml
contracts/: .gitignore  Dockerfile
contracts/script/: Deploy.s.sol
contracts/src/: Fibonacci.sol
contracts/test/: Fibonacci.t.sol
infra/: .env.template  .gitignore  .terraform.lock.hcl  main.tf  post_apply.sh
infra/scripts/: install-docker.sh  install-node-exporter.sh  install-tailscale.sh
infrastructure/: .terraform.lock.hcl  00_locals.tf  01_variables.tf  02_main.tf  03_data.tf  04_resources.tf  05_output.tf
infrastructure/templates/: executor-env.tftpl
monitoring/: docker-compose.yml
scripts/: get-influxdb-api-token.sh  install-docker.sh  install-grafana.sh  install-influxdb.sh  install-mongodb.sh  install-tailscale.sh  install-vector.sh
