[workspace]
members = ["crates/datastore", "crates/executor", "crates/indexer"]
resolver = "2"

[workspace.package]
name = "agents"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
octal-escapes = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
# workspace dependencies
datastore = { path = "crates/datastore" }

# external dependencies
alloy = { version = "0.2.0", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-rdsdata = "1.36.0"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"

# development dependencies
