[workspace]
members = [
  "crates/contracts",
  "crates/datastore",
  "crates/executor",
  "crates/indexer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
octal-escapes = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
# workspace dependencies
contracts = { path = "crates/contracts" }
datastore = { path = "crates/datastore" }

# external dependencies
alloy = { version = "0.2.0", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-rdsdata = "1.36.0"
bson = { version = "2.11.0", features = ["chrono-0_4", "serde_with-3"] }
chrono = "0.4.38"
eyre = "0.6.12"
futures-util = "0.3.30"
hex = "0.4.3"
mongodb = { version = "3.0.1", features = ["zstd-compression"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

# development dependencies
