[package]
name = "datastore"

version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# workspace dependencies

# external dependencies
aws-config = { workspace = true }
aws-sdk-rdsdata = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
