[package]
name = "executor"

version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# workspace dependencies
contracts = { workspace = true }
datastore = { workspace = true }

# external dependencies
alloy = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
