[package]
name = "indexer"

version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# workspace dependencies
datastore = { workspace = true }

# external dependencies
alloy = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
